# reactive-architecture-cookbook-code

./: .gitignore  .gitmodules  LICENSE  README.md
dm-to-rms/: local.sh
dm-to-rms/cpp/: CMakeLists.txt  demo.cc
dm-to-rms/faceextract/: CMakeLists.txt  main.cc
dm-to-rms/faceextract/faceextract/: faceextractor.cc
dm-to-rms/faceextract/faceextract-test/: CMakeLists.txt  faceextractor-test.cc
dm-to-rms/faceextract/include/: faceextractor.h
dm-to-rms/faceextract/modules/: FindngHTTP2.cmake
dm-to-rms/faceextract/test/: main-test.cc  protobuf_gen.h
dm-to-rms/group/src/main/scala/com/reactivearchitecturecookbook/: ZeroMQMain.scala
dm-to-rms/ingest/: CMakeLists.txt  build.sbt  jwt_rsa.pub  main.cc  server.crt  server.key
dm-to-rms/ingest++/: CMakeLists.txt  main.cc
dm-to-rms/ingest++/ingest-test/: CMakeLists.txt
dm-to-rms/ingest++/test/: main-test.cc
dm-to-rms/ingest/include/: ingest.h
dm-to-rms/ingest/ingest/: CMakeLists.txt  ingest.cc
dm-to-rms/ingest/modules/: FindngHTTP2.cmake
dm-to-rms/ingest/src/main/scala/com/reactivearchitecturecookbook/: Demo.scala  JWTMain.scala
dm-to-rms/ingest/src/main/scala/com/reactivearchitecturecookbook/push/: IngestRoute.scala  Main.scala
dm-to-rms/ingest/src/test/scala/com/reactivearchitecturecookbook/: DemoTest.scala
dm-to-rms/ingest/test/: CMakeLists.txt
dm-to-rms/protocol/com/reactivearchitecturecookbook/: envelope.proto  faceextract-v1m0.proto  faceextract-v2m0.proto
dm-to-rms/push/: build.sbt  jwt_rsa  jwt_rsa.pub
dm-to-rms/push/src/main/resources/: push.conf
dm-to-rms/push/src/main/scala/com/reactivearchitecturecookbook/push/: Main.scala  PushActor.scala  PushOutputActor.scala
dm-to-rms/recognition/: CMakeLists.txt  azmq.cc  main.cc
dm-to-rms/recognition/include/: recogniser.h  recognition.h
dm-to-rms/recognition/recognition/: CMakeLists.txt  recogniser.cc  recognition.cc
dm-to-rms/recognition/recognition-test/: CMakeLists.txt  recogniser-test.cc
dm-to-rms/recognition/test/: CMakeLists.txt  main-test.cc  protobuf_gen.h
dm-to-rms/scala/: build.sbt
dm-to-rms/scala/src/main/scala/com/reactivearchitecturecookbook/: Demo.scala  Main.scala
dm-to-rms/summary/: build.sbt
dm-to-rms/summary/src/main/resources/: summary.conf
dm-to-rms/summary/src/main/scala/com/reactivearchitecturecookbook/: JWTMain.scala
dm-to-rms/summary/src/main/scala/com/reactivearchitecturecookbook/summary/: Main.scala  Outcome.scala  Summaries.scala  SummariesActor.scala  Summary.scala  SummaryRoot.scala  summaries.scala  summary.scala
dm-to-rms/summary/src/test/scala/com/reactivearchitecturecookbook/summary/: SummariesTest.scala  SummaryTest.scala
eas/: local.sh
eas/data/: exercisedata.nb  fft.nb
eas/data/labelled/arms/: 1.csv  labelled_arms_jan-2_1.csv
eas/data/labelled/chest/: 2.csv  labelled_chest_jan-2_5.csv
eas/ingest/: Makefile  main.go  main_test.go  snippet.txt
eas/ingest/inf/: it.sh
eas/ingest/inf/data/: init.cql
eas/ingest/src/github.com/reactivesystemsarchitecture/eas/: handlers.go
eas/ingest/src/github.com/reactivesystemsarchitecture/eas/ingest/: cassandra.go  handlers.go  handlers_test.go  http.go  http_test.go  validation.go  validators.go  validators_test.go
eas/ingest/src/github.com/reactivesystemsarchitecture/eas/ingest/cassandra/: cassandra.go  cassandra_test.go
eas/ios/: AnyExtension.swift  Makefile  Podfile
eas/ios/EAS/: AppDelegate.swift  ClientSession.swift  Info.plist  ViewController.swift
eas/ios/EAS Protocol/: AnyExtension.swift  Envelope.proto.swift  Session.proto.swift
eas/ios/EAS WatchKit App/: Info.plist
eas/ios/EAS WatchKit Extension/: ExtensionDelegate.swift  Info.plist  InterfaceController.swift  NotificationController.swift
eas/ios/EAS.xcodeproj/: project.pbxproj
eas/ios/EAS.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
eas/ios/EAS.xcworkspace/: contents.xcworkspacedata
eas/ios/EAS/Classification/: Classifier.swift  NaiveClassifier.swift  SignalAnalysis.swift  Types.swift
eas/ios/EASTests/: EASTests.swift
eas/ios/protocol/protocol/: protocol.h
eas/it/: .gitignore  Makefile  main.go
eas/it/data/: accelerationonly.go  exercisedata.nb
eas/it/data/labelled/arms/: 1.csv
eas/it/data/labelled/chest/: 2.csv
eas/it/inf/: Dockerfile.it  it.sh
eas/it/inf/data/: init.cql
eas/protocol/github.com/reactivesystemsarchitecture/eas/: envelope.proto
eas/protocol/github.com/reactivesystemsarchitecture/eas/session/v1m0/: session.proto
eas/train/: build.sbt
eas/train/project/: protoc.sbt
eas/train/src/main/scala/com/reactivesystemsarchitecture/train/: DataSetIteratorSource.scala  LocalCvsDataSetIteratorSource.scala  Main.scala
ips/: local.sh
ips/faceextract/: CMakeLists.txt
ips/faceextract/faceextract/: CMakeLists.txt  faceextractor.cc
ips/faceextract/test/: CMakeLists.txt  main-test.cc  protobuf_gen.h
ips/ingest/: build.sbt  jwt_rsa
ips/ingest/src/main/resources/: ingest.conf
ips/ingest/src/main/scala/com/reactivearchitecturecookbook/push/: IngestRoute.scala  Main.scala
ips/protocol/com/reactivearchitecturecookbook/: envelope.proto  faceextract-v2m0.proto  ingest-v1m0.proto
ips/push/: build.sbt
ips/push/src/main/protocol/com/reactivearchitecturecookbook/: push-v1m0.proto
ips/push/src/main/scala/com/reactivearchitecturecookbook/push/: PushActor.scala  PushView.scala  RedisReadJournal.scala
ips/summary/src/main/scala/com/reactivearchitecturecookbook/summary/: SummariesActor.scala  Summary.scala
ips/summary/src/test/scala/com/reactivearchitecturecookbook/summary/: SummaryTest.scala
tooling/: build.sh  racc  tooling-docker.sh
tooling/native-devel/: Dockerfile  run.sh
tooling/native-runtime/: Dockerfile
